cmake_minimum_required(VERSION 3.26)
project(Zivotinje)

set(CMAKE_CXX_STANDARD 17)

add_executable(Zivotinje main.cpp
        Zivotinja.cpp
        Zivotinja.h
        Zivotinja.h
        Pas.cpp
        Pas.h
        Pas.h
        Konj.cpp
        Konj.h
        VeterinarskaStanica.cpp
        VeterinarskaStanica.h
        VeterinarskaStanica.h)
